--- a/fuzzing/fuzz_elf_loader/Cargo.toml
+++ b/fuzzing/fuzz_elf_loader/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-elf-loader = { path = "../../elf-loader" }
+td-loader = { path = "../../td-loader" }
 afl = {version = "*", optional = true }
 
 [features]
