--- a/fuzzing/fuzz_pe_loader/Cargo.toml
+++ b/fuzzing/fuzz_pe_loader/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-pe-loader = {path = "../../pe-loader"}
+td-loader = {path = "../../td-loader"}
 afl = { version = "*", optional = true }
 scroll = { version = "0.10", default-features=false, features = ["derive"] }
 
