--- a/td-shim-tools/Cargo.toml
+++ b/td-shim-tools/Cargo.toml
@@ -30,12 +30,12 @@ clap = { version = "3.0", features = ["cargo"], optional = true }
 der = { version = "0.4.5", features = ["oid"], optional = true }
 env_logger = { version = "0.9.0", optional = true }
 log = { version = "0.4.5", optional = true }
-pe-loader = { path = "../pe-loader", optional = true }
+td-loader = { path = "../td-loader", optional = true }
 ring = { git = "https://github.com/jyao1/ring.git", branch = "uefi_support", default-features = false, features = ["alloc"], optional = true }
 
 [features]
 default = ["boot-kernel", "enroller", "linker", "signer"]
 boot-kernel = ["td-layout/boot-kernel"]
 enroller = ["clap", "der", "env_logger", "log", "ring"]
-linker = ["clap", "env_logger", "log", "pe-loader"]
+linker = ["clap", "env_logger", "log", "td-loader"]
 signer = ["clap", "der", "env_logger", "log", "ring"]
