--- a/td-shim/Cargo.toml
+++ b/td-shim/Cargo.toml
@@ -23,10 +23,9 @@ scroll = { version = "0.10", default-features = false, features = ["derive"] }
 uefi-pi =  { path = "../uefi-pi" }
 zerocopy = "0.6.0"
 
-elf-loader = { path = "../elf-loader", optional = true }
+td-loader = { path = "../td-loader", optional = true }
 linked_list_allocator = { version = "0.9.0", optional = true }
 ring = { git = "https://github.com/jyao1/ring.git", branch = "uefi_support", default-features = false, features = ["alloc"], optional = true }
-pe-loader = { path = "../pe-loader", optional = true }
 spin = { version = "0.9.2", optional = true }
 td-exception =  { path = "../td-exception", features = ["tdx"], optional = true }
 td-layout = { path = "../td-layout", optional = true }
@@ -49,9 +48,8 @@ cet-ss = []
 secure-boot = ["der"]
 tdx = ["tdx-tdcall", "td-exception/tdx", "td-logger/tdx", "x86"]
 main = [
-    "elf-loader",
+    "td-loader",
     "linked_list_allocator",
-    "pe-loader",
     "ring",
     "spin",
     "td-exception",
