td-shim: Make build script check for required commands
Although the required tooling is documented in the README, it's too easy
to end up with a failed build due to missing tooling.

Add a new function to the build script to check for all dependencies and
fail with helpful messages on error.

Fixes: #110.

Signed-off-by: James O. D. Hunt <james.o.hunt@intel.com>

--- a/.github/workflows/library.yml
+++ b/.github/workflows/library.yml
@@ -10,6 +10,9 @@ on:
 name: Library Crates
 
 env:
+  AR: llvm-ar
+  AS: nasm
+  CC: clang
   RUST_TOOLCHAIN: nightly-2021-08-20
   TOOLCHAIN_PROFILE: minimal
 
@@ -25,14 +28,15 @@ jobs:
           - ubuntu-20.04
           - windows-2019
     steps:
-      - name: install NASM
-        uses: ilammy/setup-nasm@v1
-
+      # Install first since it's needed to build NASM
       - name: Install LLVM and Clang
         uses: KyleMayes/install-llvm-action@v1
         with:
           version: "10.0"
           directory: ${{ runner.temp }}/llvm
+
+      - name: install NASM
+        uses: ilammy/setup-nasm@v1
 
       - name: Checkout sources
         uses: actions/checkout@v2
