--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -2,6 +2,11 @@ on: [push, pull_request]
 
 name: Format and Clippy
 
+env:
+  AR: llvm-ar
+  AS: nasm
+  CC: clang
+
 jobs:
   clippy:
     name: Clippy
@@ -9,6 +14,13 @@ jobs:
     steps:
       - name: Checkout sources
         uses: actions/checkout@v2
+
+      # Install first since it's needed to build NASM
+      - name: Install LLVM and Clang
+        uses: KyleMayes/install-llvm-action@v1
+        with:
+          version: "10.0"
+          directory: ${{ runner.temp }}/llvm
 
       - name: install NASM
         uses: ilammy/setup-nasm@v1
@@ -28,6 +40,13 @@ jobs:
     name: Format
     runs-on: ubuntu-20.04
     steps:
+
+      # Install first since it's needed to build NASM
+      - name: Install LLVM and Clang
+        uses: KyleMayes/install-llvm-action@v1
+        with:
+          version: "10.0"
+          directory: ${{ runner.temp }}/llvm
 
       - name: install NASM
         uses: ilammy/setup-nasm@v1
