td-layout: add mailbox region to runtime layout
Add a new region for mailbox relocation which will be adjacent to eventlog
and acpi.

Signed-off-by: Jiaqi Gao <jiaqi.gao@intel.com>

--- a/devtools/td-layout-config/config.json
+++ b/devtools/td-layout-config/config.json
@@ -71,6 +71,7 @@
                 +--------------+ <-  0x80000000 (2G) - for example
         */
         "event_log_size": 0x100000,
+        "mailbox_size": 0x2000,
         "acpi_size": 0x100000,
         "hob_size": 0x400000,
         "shadow_stack_size": 0x200000,
