--- a/td-paging/Cargo.toml
+++ b/td-paging/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "td-paging"
 version = "0.1.0"
-description = "Setup and manage page table for td-shim"
+description = "A simple page table manager"
 repository = "https://github.com/confidential-containers/td-shim"
 homepage = "https://github.com/confidential-containers"
 license = "BSD-2-Clause-Patent"
@@ -12,5 +12,6 @@ bitfield = "0.13.2"
 log = "0.4.13"
 spin = "0.9.2"
 td-layout = { path = "../td-layout" }
-x86 = "0.41.0"
+# Lock down to 0.44, otherwise it depends on inline asm
+x86 = "0.44.0"
 x86_64 = "=0.14.6"
