--- a/tdx-tdcall/Cargo.toml
+++ b/tdx-tdcall/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "tdx-tdcall"
 version = "0.1.0"
-description = "Data stuctures and wrappers for TD_CALL/TDVM_CALL"
+description = "Constants, stuctures and wrappers to access TDCALL services"
 repository = "https://github.com/confidential-containers/td-shim"
 homepage = "https://github.com/confidential-containers"
 license = "BSD-2-Clause-Patent"
@@ -10,7 +10,7 @@ edition = "2018"
 [dependencies]
 lazy_static = { version = "1.0", features = ["spin_no_std"] }
 log = "0.4.13"
-scroll = { version = "0.10", default-features=false, features = ["derive"] }
+scroll = { version = "0.10", default-features = false, features = ["derive"] }
 spin = "0.9.2"
 
 [features]
