--- a/devtools/td-layout-config/config.json
+++ b/devtools/td-layout-config/config.json
@@ -29,11 +29,10 @@
         "config_offset": 0x0,
         "config_size": 0x040000,
         "mailbox_size": 0x001000,
-        "hob_size": 0x002000,
         "temp_stack_guard_size": 0x001000,
         "temp_stack_size": 0x020000,
         "temp_heap_size": 0x020000,
-        "payload_size": 0xC2B000,
+        "payload_size": 0xC2D000,
         "metadata_size": 0x001000,
         "ipl_size": 0x348000,
         "reset_vector_size": 0x008000
@@ -48,9 +47,11 @@
                 |   ........   |
                 +--------------+ <-  page_table_base - 0x00800000
                 |  Page Table  |
-                +--------------+ <-  payload_param_base - 0x04000000 (8M)
+                +--------------+ <-  td_hob_base - 0x01000000 (128K)
+                |    TD_HOB    |
+                +--------------+ <-  payload_param_base - 0x01100000 (1M)
                 | PAYLOAD_PARAM|     (payload_param_size)
-                +--------------+ <-  payload_base - 0x04100000 (8M)
+                +--------------+ <-  payload_base - 0x01200000 (32M)
                 |    PAYLOAD   |     (payload_size)
                 +--------------+
                 |   ........   |
@@ -62,8 +63,8 @@
                 |     STACK    |     (stack_size)
                 +--------------+ <-  shadow_stack_base - 0x7F800000 (2M)
                 |      SS      |     (shadow_stack_size)
-                +--------------+ <-  hob_base - 0x7FA00000 (5M)
-                |    TD_HOB    |     (hob_size)
+                +--------------+ <-  payload_hob_base - 0x7FA00000 (5M)
+                |  PAYLOAD_HOB |     (payload_hob_size)
                 +--------------+ <-  event_log_base - 0x7FEF0000 (1M)
                 |     ACPI     |     (ACPI)
                 +--------------+ <-  acpi_base - 0x7FF00000 (1M)
@@ -73,14 +74,16 @@
         "event_log_size": 0x100000,
         "mailbox_size": 0x2000,
         "acpi_size": 0x100000,
-        "hob_size": 0x400000,
+        "payload_hob_size": 0x400000,
         "shadow_stack_size": 0x200000,
         "stack_size": 0x800000,
         "heap_size": 0x01000000,
         "dma_size": 0x1000000,
         "payload_size": 0x2000000,
         "payload_param_size": 0x100000,
-        "payload_param_base": 0x1000000,
+        "payload_param_base": 0x01100000,
+        "td_hob_size": 0x20000,
+        "page_table_size": 0x800000,
         "page_table_base": 0x800000,
     }
 }
