--- a/td-shim/Cargo.toml
+++ b/td-shim/Cargo.toml
@@ -29,7 +29,7 @@ zerocopy = { version = "0.7.31", features = ["derive"] }
 
 td-loader = { path = "../td-loader", optional = true }
 linked_list_allocator = { version = "0.10", optional = true }
-log = { version = "0.4.13", optional = true }
+log = { version = "0.4.13", features = ["release_max_level_off"], optional = true }
 ring = { version = "0.17.14", default-features = false, features = ["alloc"], optional = true }
 spin = { version = "0.9.2", optional = true }
 td-exception =  { path = "../td-exception", optional = true }
